--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://167.99.153.250/cometa-backend/public
+REACT_APP_API_URL=https://vortipro.com/cometa-backend/public
 REACT_APP_IS_PRODUCTION=false
