--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.28.0",
     "md5": "^2.3.0",
     "react": "^17.0.2",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
     "react-google-login": "^5.2.2",
